--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/examen_microservicios_2024
-    username: usuario
-    password: password
+    username: root
+    password:
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
