--- a/application.yml
+++ b/application.yml
@@ -3,6 +3,6 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/examen_microservicios_2024
     username: root
-    password:
+    password: changeme
 
 eureka.client.serviceUrl.defaultZone: http://localhost:8761/eureka/
